# cardano-constitution-ex

./: .gitignore  cabal.project  cardano-constitution.cabal
app/: create-json-envelope.hs
src/Cardano/Constitution/Config/: Default.hs
src/Cardano/Constitution/Validator/: Default.hs
test/: Driver.hs
test/Cardano/Constitution/Validator/: GoldenTests.hs  PropTests.hs  UnitTests.hs
test/Cardano/Constitution/Validator/GoldenTests/: sorted.large.budget.golden  sorted.pir.golden  sorted.small.budget.golden  sorted.uplc.golden  unsorted.large.budget.golden  unsorted.pir.golden  unsorted.small.budget.golden  unsorted.uplc.golden
test/Helpers/: CekTests.hs  MultiParam.hs  TestBuilders.hs
