cabal-version:      3.0
name:               cardano-constitution
version:            1.31.0.0
license:            Apache-2.0
maintainer:         nikolaos.bezirgiannis@iohk.io
author:             Plutus Core Team
synopsis:           Cardano's Constitution
description:        The Cardano's Constitution plutus script part
category:           Language
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  data/constitutionConfig.json

executable create-json-envelope
  -- This is a temporary workaround to solve the plutus-ledger-api dependency conflict
  -- caused by the `cardano-api` dependency.
  hs-source-dirs: app
  main-is:        create-json-envelope.hs
  build-depends:
    , base
    , cardano-api           ^>=8.48
    , cardano-constitution-engine ^>=1.31
    , plutus-ledger-api
    , aeson
