cabal-version:      3.0
name:               cardano-constitution
version:            1.31.0.0
license:            Apache-2.0
maintainer:         nikolaos.bezirgiannis@iohk.io
author:             Plutus Core Team
synopsis:           Cardano's Constitution
description:        The Cardano's Constitution plutus script part
category:           Language
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  data/constitutionConfig.json

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness

common ghc-version-support
  -- See the section on GHC versions in CONTRIBUTING
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

common os-support
  if (impl(ghcjs) || os(windows))
    buildable: False

library internal
  --visibility: private
  import:           lang, ghc-version-support, os-support
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Cardano.Constitution.Config.Default
    Cardano.Constitution.Validator.Default
  build-depends:
    , base                                            >=4.9   && <5
    , cardano-constitution-engine                            ^>=1.31
    , plutus-core ^>=1.31
    , plutus-tx ^>=1.31
    , containers

test-suite cardano-constitution-test
  import:           lang, ghc-version-support, os-support
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  main-is:          Driver.hs
  other-modules:
    Cardano.Constitution.Validator.GoldenTests
    Cardano.Constitution.Validator.PropTests
    Cardano.Constitution.Validator.TestsCommon
    Cardano.Constitution.Validator.UnitTests
    Helpers.CekTests
    Helpers.Farey
    Helpers.Guardrail
    Helpers.Intervals
    Helpers.MultiParam
    Helpers.Spec.FareySpec
    Helpers.Spec.IntervalSpec
    Helpers.TestBuilders
    PlutusLedgerApi.V3.ArbitraryContexts

  build-depends:
    , aeson
    , base                                            >=4.9   && <5
    , bytestring
    , cardano-constitution-engine                            ^>=1.31
    , cardano-constitution:{internal}
    , containers
    , directory
    , filepath
    , plutus-core:{plutus-core, plutus-core-testlib}  ^>=1.31
    , plutus-ledger-api                               ^>=1.31
    , plutus-tx                                       ^>=1.31
    , QuickCheck
    , serialise
    , tasty
    , tasty-expected-failure
    , tasty-golden
    , tasty-hunit
    , tasty-json
    , tasty-quickcheck

executable create-json-envelope
  -- This is a temporary workaround to solve the plutus-ledger-api dependency conflict
  -- caused by the `cardano-api` dependency.
  hs-source-dirs: app
  main-is:        create-json-envelope.hs
  build-depends:
    , base
    , cardano-api           ^>=8.48
    , cardano-constitution-engine ^>=1.31
    , plutus-ledger-api
    , aeson
